clusters/my-k3s/apps/base/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
  type: ClusterIP
